--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2026.2.1"
+    id "com.peterabeles.gversion" version "1.10"
 }
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 }
+
 
 def ROBOT_MAIN_CLASS = "frc.robot.Main"
 
@@ -50,6 +52,13 @@ wpi.java.debugJni = false
 // Set this to true to enable desktop support.
 def includeDesktopSupport = false
 
+
+// AdvantageKit replay task
+task(replayWatch, type: JavaExec) {
+    mainClass = "org.littletonrobotics.junction.ReplayWatch"
+    classpath = sourceSets.main.runtimeClasspath
+}
+
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
 dependencies {
@@ -73,7 +82,55 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    def akitJson = new groovy.json.JsonSlurper().parseText(new File(projectDir.getAbsolutePath() + "/vendordeps/AdvantageKit.json").text)
+    annotationProcessor "org.littletonrobotics.akit:akit-autolog:$akitJson.version"
 }
+
+project.compileJava.dependsOn(createVersionFile)
+gversion {
+    srcDir = "src/main/java/"
+    classPackage = "frc.robot"
+    className = "BuildConstants"
+    dateFormat = "yyyy-MM-dd HH:mm:ss z"
+    timeZone = "America/New_York" // Use preferred time zone
+    indent = " "
+}
+
+// Create commit with working changes on event branches
+task(eventDeploy) {
+	doLast {
+		if (project.gradle.startParameter.taskNames.any({ it.toLowerCase().contains("deploy") })) {
+			def branchPrefix = "event"
+			def branch = 'git branch --show-current'.execute().text.trim()
+			def commitMessage = "Update at '${new Date().toString()}'"
+
+			if (branch.startsWith(branchPrefix)) {
+				exec {
+					workingDir(projectDir)
+					executable 'git'
+					args 'add', '-A'
+				}
+				exec {
+					workingDir(projectDir)
+					executable 'git'
+					args 'commit', '-m', commitMessage
+					ignoreExitValue = true
+				}
+
+				println "Committed to branch: '$branch'"
+				println "Commit message: '$commitMessage'"
+			} else {
+				println "Not on an event branch, skipping commit"
+			}
+		} else {
+			println "Not running deploy task, skipping commit"
+		}
+	}
+}
+createVersionFile.dependsOn(eventDeploy)
+
+
 
 test {
     useJUnitPlatform()
